# scaler

./: .dockerignore  .gitignore  Dockerfile  OPENENV_PLAN.md  PROCEDURE.md  README.md  app.py  bert_train(new).py  bert_train(old).py  conftest.py  dataset_generator.py  inference.py  openenv.yaml  pyproject.toml  requirements-prod.txt  requirements.txt
api/: main.py
baseline/: openai_baseline.py  sklearn_baseline.py
data/: prompts.csv
docs/: research_design.md
env/: core.py  dataset.py  models.py
graders/: easy_grader.py  hard_grader.py  medium_grader.py
models/: model.pkl  vectorizer.pkl
scripts/: validate_submission.ps1
server/: app.py
src/: train_baseline.py
tasks/: easy.py  hard.py  medium.py
tests/: test_env.py  test_graders.py
